2014-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* files.el (find-file-noselect): Clarify prompt when changing
	readedness (bug#13261).
	(locate-file): Suffixes aren't returned, so don't say that they
	are (bug#12674).

	* dired.el (dired-internal-do-deletions): Don't say "Deleting..."
	before we actually start to delete things (bug#16331).

	* subr.el (event-start): Doc fix (bug#14228).
	(event-end): Ditto.

2014-02-09  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/warnings.el (lwarn):
	Empower help-enable-auto-load.  (Bug#15940)

2014-02-08  Andreas Schwab  <schwab@linux-m68k.org>

	* vc/log-edit.el (log-edit-comment-to-change-log): Doc fix.
	(Bug#16690)

2014-02-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-sh-handle-start-file-process):
	Insert output at end of buffer.  (Bug#16120)

2014-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* simple.el (choose-completion-string-functions): Document new
	calling convention (bug#14153).
	(execute-extended-command): Clarify doc string (bug#13373).

	* kmacro.el (kmacro-exec-ring-item): Doc fix (bug#14198).

	* find-dired.el (find-name-dired): Doc fix (bug#14290).
	(find-grep-dired): Doc fix (bug#14288).

2014-02-08  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-quote-char): Check character validity
	like in `quoted-insert' (bug#16677).

2014-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* files.el (find-file-visit-truename): Doc clarification (bug#14697).

	* isearch.el (isearch-hide-immediately): Doc clarification
	(bug#14723).

	* simple.el (line-move): Document utility function used many
	places in the Emacs sources (bug#14843).

	* dired.el (dired-mode-map): Make :help text more accurate (bug#14893).
	(dired-prev-marked-file): Doc fix (bug#14855).
	(dired-up-directory): Doc fix (bug#14848).

	* minibuffer.el (read-file-name): Doc clarification (bug#15096).

	* files.el (file-relative-name): Doc fix (bug#15159).

	* fringe.el (fringe-styles): Doc fix (bug#15239).
